--- a/app/src/main/res/layout/fragment_fare_settings.xml
+++ b/app/src/main/res/layout/fragment_fare_settings.xml
@@ -10,7 +10,7 @@
     <ImageView
         android:layout_width="100sp"
         android:layout_height="100sp"
-        android:src="@drawable/applogo"
+        android:src="@drawable/app_logo"
         android:layout_gravity="center"
         />
 
