--- a/app/src/main/res/layout/fragment_transaction_history.xml
+++ b/app/src/main/res/layout/fragment_transaction_history.xml
@@ -20,7 +20,7 @@
                 android:id="@+id/imageView"
                 android:layout_width="wrap_content"
                 android:layout_height="147dp"
-
+                android:layout_marginBottom="50dp"
                 android:layout_gravity="center_horizontal"
                 android:paddingTop="20dp"
                 android:src="@drawable/app_logo"
@@ -50,6 +50,36 @@
             android:text="@string/today"
             android:textColor="#FFFFFF"
             android:textSize="15sp" />
+
+        <TableLayout
+            android:id="@+id/transactions"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:stretchColumns="0"
+            android:background="@color/white"
+            android:divider="?android:attr/dividerHorizontal"
+            android:showDividers="middle"
+            android:layout_marginBottom="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            >
+
+            <TableRow
+                android:divider="?android:attr/dividerHorizontal"
+                android:showDividers="middle">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="8dp"/>
+
+
+
+
+            </TableRow>
+
+
+        </TableLayout>
 
 
     </LinearLayout>
