--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -46,6 +46,12 @@
         android:label="Working Hours"
         tools:layout="@layout/fragment_working_hours" />
 
+    <fragment
+        android:id="@+id/nav_transactionhistory"
+        android:name="com.firstapp.testdondaapp.TransactionHistory"
+        android:label="Transaction history"
+        tools:layout="@layout/fragment_transaction_history" />
+
 
 
 
