--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,6 +2,7 @@
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:id="@+id/fragment_container"
     android:layout_height="match_parent"
     android:background="#FFF"
     android:padding="16dp">
@@ -32,7 +33,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:text="Hello John Doe"
+            android:text="Hello 👋👋"
+            android:fontFamily="@font/montserrat_regular"
             android:textColor="#000"
             android:textSize="35sp"
             android:textStyle="bold"
@@ -52,6 +54,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="BALANCE"
+                android:fontFamily="@font/montserrat_regular"
                 android:textColor="#000"
                 android:textSize="28sp" />
 
@@ -59,6 +62,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Ksh 0.00"
+                android:fontFamily="@font/montserrat_regular"
                 android:textColor="#000"
                 android:textSize="28sp"
                 android:textStyle="bold" />
@@ -77,9 +81,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="COLLECT FARE"
+            android:fontFamily="@font/montserrat_regular"
             android:background="@drawable/maroongradientbackground"
             android:textColor="@color/white"
-
+               android:textStyle="bold"
             android:layout_marginTop="16dp"
             android:gravity="center"/>
 
@@ -92,36 +97,13 @@
             android:weightSum="2"
             android:gravity="center_horizontal">
 
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                android:background="@drawable/bluegradientbackground"
-                android:padding="16dp"
-                android:gravity="center">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="TRIPS DONE:"
-                    android:textColor="@color/white"
-                     />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="0"
-                    android:textColor="@color/white"
-                    android:textSize="35sp"
-                    android:textStyle="bold" />
-            </LinearLayout>
             <View
                 android:layout_width="8dp"
                 android:layout_height="match_parent" />
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:id="@+id/transaction_history"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:orientation="vertical"
@@ -132,45 +114,15 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="WORKING HOURS:"
+                    android:text="Check your transaction history:"
+                    android:fontFamily="@font/montserrat_regular"
                     android:textColor="@color/white"
                     android:textSize="18sp" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="00:00:00"
-                    android:textColor="@color/white"
-
-                    android:textStyle="bold" />
             </LinearLayout>
         </LinearLayout>
 
         <!-- Current Trip Section -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="@drawable/bluebackground"
-            android:padding="16dp"
-            android:layout_marginTop="16dp"
-            android:gravity="center">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="CURRENT TRIP:"
-                android:textColor="@color/black"
-                android:textSize="18sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="FROM: HERE     TO: THERE"
-                android:textColor="@color/black"
-
-                android:textStyle="bold" />
-        </LinearLayout>
 
         <!-- Profile Information Section -->
         <LinearLayout
@@ -181,43 +133,17 @@
             android:orientation="horizontal"
             android:padding="16dp">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Profile Information:"
-                android:textColor="@color/black"
-                android:textSize="14sp" />
+
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="Username: John Doe\nEmail: johndoe@gmail.com\nTrips made: 0\nCar Type: Nissan\nCar Nickname: Nissan\nAmount made: 0"
+                android:fontFamily="@font/montserrat_regular"
+                android:text="Hello dear conductor,\n\nYou are advised to keep you and your passengers safe. Ensure all your passengers wear seatbelts during the journey.\n\nIn case of any suspicious activity among the passengers, ensure you call 999.\n\nRemember that you are constantly being monitored by various boards of travel."
                 android:textColor="@color/black"
                 android:textSize="14sp" />
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:orientation="horizontal"
-            android:padding="10dp">
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/maroongradientbackground"
-                android:text="@string/edit"
-                android:textColor="@color/white" />
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:background="@drawable/maroongradientbackground"
-                android:text="SAVE"
-                android:textColor="@color/white" />
-        </LinearLayout>
     </LinearLayout>
 </ScrollView>
