--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-
+        android:fontFamily="@font/montserrat_regular"
         android:text="@string/create_account"
 
         android:textSize="40sp"
@@ -54,6 +54,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/email"
                 android:hint="@string/Email"
+                android:fontFamily="@font/montserrat_regular"
                 android:textSize="20sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -71,7 +72,7 @@
                 android:id="@+id/password"
                 android:hint="@string/password"
                 android:textSize="20sp"
-
+                android:fontFamily="@font/montserrat_regular"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
@@ -90,7 +91,7 @@
             android:layout_marginHorizontal="10dp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="40dp"
-
+            android:fontFamily="@font/montserrat_regular"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/maroongradientbackground"
             android:text="@string/sign_up"
@@ -109,7 +110,7 @@
         android:text="@string/already_have_an_account_login"
         android:textAlignment="center"
         android:textColor="@color/white"
-
+        android:fontFamily="@font/montserrat_regular"
         android:textSize="20sp" />
 
 
