--- a/app/src/main/res/layout/fragment_fare_collection.xml
+++ b/app/src/main/res/layout/fragment_fare_collection.xml
@@ -1,140 +1,127 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/soft_gray"
+    android:orientation="vertical"
+    android:paddingStart="16dp"
+    android:paddingTop="50dp"
+    android:paddingEnd="16dp">
 
-    <!-- Main Content Layout -->
+    <!-- Logo Section -->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="@color/soft_gray"
-        android:padding="16dp">
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
 
-        <!-- Logo Section -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:orientation="horizontal"
-            android:gravity="center">
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/app_logo" />
 
-            <ImageView
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:src="@drawable/app_logo" />
+        <View
+            android:layout_width="1dp"
+            android:layout_height="80dp"
+            android:layout_margin="16dp"
+            android:background="#000000" />
 
-            <View
-                android:layout_width="1dp"
-                android:layout_height="80dp"
-                android:background="#000000"
-                android:layout_margin="16dp"/>
-
-            <ImageView
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:src="@drawable/mpesa_logo3" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="80dp"
-            android:orientation="vertical">
-            <!-- Fare Collection Title -->
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:background="@drawable/bluegradientbackground"
-                android:gravity="center"
-                android:padding="12dp"
-                android:text="@string/fare_collection"
-
-                android:textColor="#FFFFFF"
-                android:textSize="18sp" />
-
-            <!-- Form Section -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="16dp"
-                android:background="@drawable/opaquebluebackground"
-                android:orientation="vertical"
-                android:padding="16dp">
-
-                <!-- Route Selection -->
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-
-                    android:text="@string/route"
-                    android:textStyle="bold"
-                    android:textColor="#FFFFFF"
-                    android:textSize="20sp" />
-
-                <Spinner
-                    android:id="@+id/mySpinner"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textAlignment="center"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp"
-                    android:background="@drawable/white_background"
-                    android:spinnerMode="dropdown"
-                    android:textSize="20sp" />
-
-                <!-- Amount Input -->
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/Amount"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
-                        android:layout_marginTop="10dp"
-                        android:background="@drawable/white_background"
-                        android:hint="@string/amount"
-                        android:textSize="15sp" />
-
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <!-- Phone Number Input -->
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/phone_no"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:background="@drawable/white_background"
-                        android:hint="@string/phone_number"
-                        android:textSize="15sp" />
-
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <!-- Collect Button -->
-                <androidx.appcompat.widget.AppCompatButton
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:background="@drawable/gradient_maroon"
-                    android:text="@string/collect"
-                    android:textColor="#FFFFFF"
-                    android:textSize="18sp" />
-            </LinearLayout>
-        </LinearLayout>
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/mpesa_logo3" />
     </LinearLayout>
 
-    <!-- Bottom Navigation View -->
+    <!-- Fare Collection Title -->
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/bluegradientbackground"
+        android:gravity="center"
+        android:padding="12dp"
+        android:text="@string/fare_collection"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp" />
+
+    <!-- Form Section -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/bluebackground"
+        android:orientation="vertical"
+        android:padding="16dp">
+
+        <!-- Route Selection -->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/route"
+            android:textColor="#FFFFFF"
+            android:textSize="16sp" />
 
 
-</FrameLayout>
+        <Spinner
+            android:id="@+id/mySpinner"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/whitegradientbackground"
+            android:spinnerMode="dropdown" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Amount:"
+            android:textColor="#FFFFFF"
+            android:textSize="16sp" />
+
+        <TextView
+            android:id="@+id/amount"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:text=""
+            android:hint="Amount"
+            android:background="@drawable/whitegradientbackground"
+            android:textColor="@color/black"
+            android:paddingStart="10dp"
+            android:gravity="center_vertical"
+            android:layout_marginBottom="8dp"
+            android:textSize="16sp"
+            tools:ignore="HardcodedText" />
+
+        <!--Phone number text box-->
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/phone_no"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/whitegradientbackground"
+                android:hint="Phone Number"
+                android:textColor="@color/black"
+                android:textSize="15sp" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <!-- Collect Button -->
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/collectfare_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/maroongradientbackground"
+            android:text="@string/collect"
+            android:textColor="#FFFFFF"
+            android:textSize="18sp" />
+    </LinearLayout>
+
+
+</LinearLayout>
