--- a/app/src/main/res/layout/fragment_fare_settings.xml
+++ b/app/src/main/res/layout/fragment_fare_settings.xml
@@ -22,6 +22,7 @@
         android:gravity="center"
         android:padding="12dp"
         android:text="@string/fare_settings"
+        android:fontFamily="@font/montserrat_regular"
         android:textColor="#FFFFFF"
         android:textSize="18sp" />
 
@@ -31,6 +32,7 @@
         android:orientation="vertical"
         android:layout_margin="20dp"
         android:padding="10dp"
+
         android:background="@drawable/bluebackground">
 
         <TextView
