--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -11,7 +11,7 @@
             android:icon="@drawable/profile_logo" />
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/home_icon2"
             android:title="@string/menu_home" />
 
         <item
@@ -33,18 +33,11 @@
 
         <item
             android:id="@+id/nav_faresettings"
-            android:icon="@drawable/baseline_settings_24"
+            android:icon="@drawable/settings_icon"
             android:title="@string/fare_settings"/>
 
 
-        <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
-        <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
+
         <item
             android:id="@+id/nav_logout"
             android:title="@string/logout"
